# otto-langgraph

./: README.md  common.py  pyproject.toml  requirements.txt  rung1.py  rung10.py  rung11.py  rung14.py  rung15.py  rung16.py  rung3.py  rung4.py  rung5.py  rung6.py
docs/: architecture.html  linkedin-post.md
learning/: common.py  rung12.py  rung13.py  rung2.py  rung7.py  rung8.py  rung9.py  rung_template.py
otto/: __init__.py  __main__.py  chat.py  config.py  graph.py  roster.py  schemas.py  sdk.py
tests/: test_otto.py
